--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CRUD REST Web API for working with meetUps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/Weff182/MeetUp-API/issues"
   },
-  "homepage": "https://github.com/Weff182/MeetUp-API#readme"
+  "homepage": "https://github.com/Weff182/MeetUp-API#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
