--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-POSTGRES_NAME=meetup-api-DB
+POSTGRES_NAME=meetupDB
 POSTGRES_USER=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PASSWORD=ruut
