--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "CRUD REST Web API for working with meetUps",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "gen": "node ./swagger/index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +19,6 @@
   "homepage": "https://github.com/Weff182/MeetUp-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
@@ -28,11 +26,12 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
-    "swagger-autogen": "^2.21.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "eslint": "^8.15.0",
+    "nodemon": "^2.0.16",
+    "prettier": "2.6.2"
   }
 }
