--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
