--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/Weff182/MeetUp-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
