--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CRUD REST Web API for working with meetUps",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-mocks-http": "^1.11.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
@@ -34,11 +36,14 @@
     "sequelize": "^6.19.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.16",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "supertest": "^6.2.4"
   }
 }
