--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
@@ -40,7 +43,11 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.30.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.16",
     "prettier": "2.6.2",
